--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="mailto:jingwei22@mails.tsinghua.edu.cn">Email</a> / 
         <a href="https://github.com/jingwei-18" target="_blank">GitHub</a> / 
         <a href="https://scholar.google.com/citations?user=0jCaDVkAAAAJ&hl=zh-CN" target="_blank">Google Scholar</a> / 
-        <a href="data/CV.pdf" target="_blank">CV</a>
+        <a href="data/cv_wjw.pdf" target="_blank">CV</a>
     </p>
 </body>
 </html>
